[package]
name = "pub-progs-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-bpf = { git = "https://github.com/vadorovsky/aya", branch = "bpf-macros-visibility" }
aya-log-ebpf = { git = "https://github.com/vadorovsky/aya", branch = "bpf-macros-visibility" }
pub-progs-common = { path = "../pub-progs-common" }

[patch."https://github.com/aya-rs/aya"]
aya-bpf = { git = "https://github.com/vadorovsky/aya", branch = "bpf-macros-visibility" }

[lib]
name = "pub_progs"
path = "src/lib.rs"

[[bin]]
name = "pub-progs"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = []
