[package]
name = "tc-ringbuf-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-bpf = { git = "https://github.com/vadorovsky/aya", branch = "ringbuf-integration" }
aya-log-ebpf = { git = "https://github.com/vadorovsky/aya", branch = "ringbuf-integration" }
tc-ringbuf-common = { path = "../tc-ringbuf-common" }

[[bin]]
name = "tc-ringbuf"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = []
