[package]
name = "tc-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-bpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-log-ebpf = { git = "https://github.com/vadorovsky/aya", branch = "aya-log-macros-fix" }
memoffset = "0.6"
tc-common = { path = "../tc-common" }

[patch.'https://github.com/aya-rs/aya']
aya-bpf = { git = "https://github.com/vadorovsky/aya", branch = "aya-log-macros-fix" }

[[bin]]
name = "tc"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = []
