[package]
name = "tc"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = ">=0.11", features=["async_tokio"] }
aya-log = { git = "https://github.com/vadorovsky/aya", branch = "aya-log-macros-fix" }
tc-common = { path = "../tc-common", features=["user"] }
anyhow = "1.0.42"
clap = { version = "3.1", features = ["derive"] }
log = "0.4"
simplelog = "0.12"
tokio = { version = "1.18", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }

[[bin]]
name = "tc"
path = "src/main.rs"
