[package]
name = "xdp-mac-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-bpf = { git = "https://github.com/vadorovsky/aya", branch = "aya-log-mac-addr" }
aya-log-ebpf = { git = "https://github.com/vadorovsky/aya", branch = "aya-log-mac-addr" }
xdp-mac-common = { path = "../xdp-mac-common" }
network-types = { git = "https://github.com/vadorovsky/network-types", branch = "main" }

[[bin]]
name = "xdp-mac"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = []
