[package]
name = "xdp-mac"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/vadorovsky/aya", branch = "aya-log-mac-addr", features=["async_tokio"] }
aya-log = { git = "https://github.com/vadorovsky/aya", branch = "aya-log-mac-addr" }
xdp-mac-common = { path = "../xdp-mac-common", features=["user"] }
anyhow = "1.0.42"
clap = { version = "3.1", features = ["derive"] }
env_logger = "0.9"
log = "0.4"
tokio = { version = "1.18", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }

[[bin]]
name = "xdp-mac"
path = "src/main.rs"
