[package]
name = "xdp-mut-u8-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-bpf = { git = "https://github.com/vadorovsky/aya", branch = "xdp-tc-mut-u8" }
aya-log-ebpf = { git = "https://github.com/vadorovsky/aya", branch = "xdp-tc-mut-u8" }
xdp-mut-u8-common = { path = "../xdp-mut-u8-common" }
network-types = "0.0.1"

[[bin]]
name = "xdp-mut-u8"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = []
