[package]
name = "xdp-perfbuf"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = ">=0.11", features=["async_tokio"] }
aya-log = "0.1"
xdp-perfbuf-common = { path = "../xdp-perfbuf-common", features=["user"] }
anyhow = "1.0.42"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
tokio = { version = "1.23", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
bytes = "1.3"
network-types = "0.0.4"

[[bin]]
name = "xdp-perfbuf"
path = "src/main.rs"
