[package]
name = "xdp"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", branch = "main", features=["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya", branch = "main" }
xdp-common = { path = "../xdp-common", features=["user"] }
anyhow = "1.0.42"
clap = { version = "3.1", features = ["derive"] }
env_logger = "0.9"
log = "0.4"
tokio = { version = "1.18", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }

[[bin]]
name = "xdp"
path = "src/main.rs"
